[tool.poetry]
name = "utility_management"
version = "0.1.0"
description = "Utility management API for the company"
authors = ["YeohJerWei <yeohjerwe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
python-dotenv = "^0.14.0"
cuid = "^0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
