[tool.poetry]
name = "inventory_tracker"
version = "0.1.0"
description = ""
authors = ["YeohJerWei <yeohjerwe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
graphene = "^2.1.8"
sqlalchemy = "^1.3.18"
cuid = "^0.3"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
alembic = "^1.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
